--- a/subsystems/navigation/aruco_detection/package.xml
+++ b/subsystems/navigation/aruco_detection/package.xml
@@ -8,10 +8,9 @@
   <license>TODO: License declaration</license>
 
   <!-- Build dependencies -->
-  <buildtool_depend>ament_python</buildtool_depend>
   <exec_depend>rclpy</exec_depend>
   <exec_depend>cv_bridge</exec_depend>
-  <exec_depend>opencv-python</exec_depend>
+  <exec_depend>python3-opencv</exec_depend>
   
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
